# ddta

./: .gitignore  ESTUDO_TECNICO_DRONEDATA.md  PREVIEW_PLAN.md  README.md  plano-backend.md  plano-frontend.md  plano-voo-teste.md  plataforma-mapeamento-drone.md
backend/: .env.example  .env.local.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_make_project_user_nullable.py  003_add_processing_task_fields.py  004_remove_users_and_project_user_id.py  005_add_planner_data_to_projects.py  006_add_preview_fields_to_projects.py  006_calibration_sessions.py  007_calibration_images_exif.py  008_calibration_pixel_report.py  009_calibration_theoretical_grid.py  010_calibration_slot_pixel_extras.py  011_calibration_small_thumbnail.py  012_merge_preview_and_calibration_heads.py  013_add_processing_and_preview_runs.py  014_workspace_map_api_keys.py  015_drone_models.py  016_add_mini_5_pro_drone_model.py  017_project_images_telemetry.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: __init__.py
backend/app/db/: session.py
backend/app/schemas/: __init__.py  auth.py  calibration.py  drone_models.py  flightplan.py  map_api_keys.py  processing.py  processing_queue.py  project.py
backend/app/services/: processing_monitor.py  recommendation_engine.py
backend/app/tasks/: calibration_tasks.py  (+2 more)
backend/tests/: test_calibration_grid.py  test_exif_aggregate.py  test_image_quality.py  test_recommendation_engine.py  test_slot_aggregate.py  test_xmp_parser.py
(+344 files in other folders)
